update in visual

--- a/respiratory_diagnosis_assistant/search/templates/search/text_results.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/text_results.html
@@ -24,7 +24,7 @@
         <p>Chest Location: {{ result.chest_location }}</p>
         <p>Acquisition Model: {{ result.acquisition_model }}</p>
         <p>Recording Equipment: {{ result.recording_equipment }}</p>
-        <p>Respiratory Cycles: {{ result.respiratory_cycles }}</p>
+        <p>Respiratory Cycles (in seconds): {{ result.respiratory_cycles }}</p>
     </div>
     {% endfor %}
 </body>
