--- a/respiratory_diagnosis_assistant/search/static/search/style.css
+++ b/respiratory_diagnosis_assistant/search/static/search/style.css
@@ -47,3 +47,18 @@ body h2{
     color: 0B2545
 }
   
+.btn {
+    display: inline-block;
+    padding: 10px 20px;  /* Padding for a button-like appearance */
+    background-color: #007bff;  /* Blue background */
+    color: white;  /* White text */
+    text-align: center;
+    text-decoration: none;  /* Remove underline */
+    border: none;  /* No border */
+    border-radius: 5px;  /* Rounded corners */
+    font-size: 16px;  /* Font size */
+}
+
+.btn:hover {
+    background-color: #0056b3;  /* Darker blue on hover */
+}
