--- a/respiratory_diagnosis_assistant/search/templates/search/text_results.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/text_results.html
@@ -25,6 +25,7 @@
         <p>Acquisition Model: {{ result.acquisition_model }}</p>
         <p>Recording Equipment: {{ result.recording_equipment }}</p>
         <p>Respiratory Cycles (in seconds): {{ result.respiratory_cycles }}</p>
+        <p>Average Respiratory Cycle (in seconds): {{ result.average_cycle }}</p>
     </div>
     {% endfor %}
 </body>
