--- a/respiratory_diagnosis_assistant/search/templates/search/text_results.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/text_results.html
@@ -7,10 +7,41 @@
     <title>Text Result Page</title>
 </head>
 <body>
+    
     <h1>Text Result Page</h1>
+
+    <!-- Link to go back to the home page or another section -->
+    <div class="navigation">
+        <a href="{% url 'home' %}">Return to Home</a>
+    </div>
+
+    <div>
+        <h2>Input Information</h2>
+        <ul>
+            {% if input.age %}
+            <li>Age: {{ input.age }}</li>
+            {% endif %}
+            {% if input.sex %}
+            <li>Sex: {{ input.sex }}</li>
+            {% endif %}
+            {% if input.bmi %}
+            <li>BMI: {{ input.bmi }}</li>
+            {% endif %}
+            {% if input.child_weight %}
+            <li>Child Weight: {{ input.child_weight }}</li>
+            {% endif %}
+            {% if input.child_height %}
+            <li>Child Height: {{ input.child_height }}</li>
+            {% endif %}
+            {% if input.predicted_condition %}
+            <li>Predicted Condition: {{ input.predicted_condition }}</li>
+            {% endif %}
+        </ul>
+    </div>
+
     {% for result in results %}
     <div>
-        <h2>Metadata</h2>
+        <h2>Data Information</h2>
         <p>Patient Number: {{ result.patient_number }}</p>
         <p>Age: {{ result.age }}</p>
         <p>Sex: {{ result.sex }}</p>
