--- a/respiratory_diagnosis_assistant/search/templates/search/audio_results.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/audio_results.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Audio Results</h1>
 
-    <!-- Link to go back to the home page or another section -->
+    <!-- Link to go back to the search page or another section -->
     <div class="navigation">
-        <a href="{% url 'home' %}">Return to Home</a>
+        <a href="{% url 'search' %}">Return to Search</a>
     </div>
 
     <!-- CSRF protection -->
@@ -48,7 +48,7 @@
                 <li>Child Height: {{ input.child_height }}</li>
                 {% endif %}
                 {% if input.predicted_condition %}
-                <li>Predicted Condition: {{ input.predicted_condition }}</li>
+                <li><strong>Predicted Condition: {{ input.predicted_condition }}</strong></li>
                 {% endif %}
             </ul>
         </div>
