--- a/respiratory_diagnosis_assistant/search/templates/search/text_results.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/text_results.html
@@ -12,7 +12,7 @@
 
     <!-- Link to go back to the home page or another section -->
     <div class="navigation">
-        <a href="{% url 'home' %}">Return to Home</a>
+        <a href="{% url 'search' %}">Return to Search</a>
     </div>
 
     <div>
@@ -32,9 +32,6 @@
             {% endif %}
             {% if input.child_height %}
             <li>Child Height: {{ input.child_height }}</li>
-            {% endif %}
-            {% if input.predicted_condition %}
-            <li>Predicted Condition: {{ input.predicted_condition }}</li>
             {% endif %}
         </ul>
     </div>
