--- a/respiratory_diagnosis_assistant/search/templates/search/audio_results.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/audio_results.html
@@ -50,8 +50,8 @@
                 {% if input.predicted_condition %}
                 <li><strong>Predicted Condition: {{ input.predicted_condition }}</strong></li>
                 {% endif %}
-                {% if result.predicted_score %}
-                <li><strong>Predicted Score: {{ result.predicted_score }}</strong></li>
+                {% if input.predicted_score %}
+                <li><strong>Predicted Score: {{ input.predicted_score }}</strong></li>
                 {% endif %}
             </ul>
         </div>
