edited audio results to display child information

--- a/respiratory_diagnosis_assistant/search/templates/search/audio_results.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/audio_results.html
@@ -35,7 +35,7 @@
                 <li>Sex: {{ result.sex }}</li>
                 {% endif %}
                 {% if result.bmi %}
-                <li>BMI: {{ result.bmi }}</li>
+                <li>BMI: {{ result.adult_bmi }}</li>
                 {% endif %}
                 {% if result.child_weight %}
                 <li>Child Weight: {{ result.child_weight }}</li>
