--- a/respiratory_diagnosis_assistant/search/templates/search/search.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/search.html
@@ -63,8 +63,8 @@
   <label for="sex">Sex:</label>
   <select id="sex" name="sex">
     <option value=null></option>
-    <option value="male">Male</option>
-    <option value="female">Female</option>
+    <option value="M">Male</option>
+    <option value="F">Female</option>
   </select><br>
   
   <label for="bmi">Adult BMI:</label>
