--- a/respiratory_diagnosis_assistant/search/templates/search/help.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/help.html
@@ -40,16 +40,15 @@
         <!-- Add more documentation as needed -->
     </ul>
 
-
     <h2>Frequently Asked Questions (FAQs)</h2>
 
     <strong>Q: How do I upload an audio file?</strong> <br>
     A: On the search page, select the option to upload an audio file and choose the file from your device.
 
-    <br><br>
+    <br>
     
-    <strong>Q: Can I search using keywords?</strong><br>
-    A: Yes, you can enter keywords related to respiratory conditions in the search box.
+    <strong>Q: How do I search patient cases?</strong><br>
+    A: You can click one of the diseases in the dropdown options. 
     <!-- Add more FAQs as needed -->
 </body>
 </html>
