--- a/respiratory_diagnosis_assistant/search/templates/search/home.html
+++ b/respiratory_diagnosis_assistant/search/templates/search/home.html
@@ -29,6 +29,7 @@
     <h2>Project Goal</h2>
     <p>The primary goal of this project is to develop a robust, user-friendly application optimized for querying lung sound audio files. We aim to enhance the diagnostic process by enabling matching between specific lung diseases and their characteristic sound patterns. By leveraging advanced machine learning techniques and optimized database management practices, we intend to streamline the querying process. This will facilitate immediate access to relevant audio samples based on disease input and enable predictive disease identification from lung sound patterns. Additionally, we aim to enable users, including healthcare professionals and patients, to contribute new audio recordings and metadata to enrich the database and improve the accuracy of disease classification.</p>
 
+
     <h2>Respiratory Conditions</h2>
     <!-- Brief descriptions of respiratory conditions -->
     <ul class="respiratory-conditions">
@@ -54,7 +55,7 @@
         </li>
         <li>
             <strong>Bronchiolitis:</strong> Common respiratory illness in infants and young children, typically caused by a viral infection, leading to inflammation and mucus buildup in the small airways of the lungs.
-            <a href="https://www.nhs.uk/conditions/bronchiolitis/" target="_blank">More info on </a>
+            <a href="https://www.nhs.uk/conditions/bronchiolitis/" target="_blank">More info on Bronchiolitis</a>
         </li>
     </ul>
 
